--- a/com.palantir.typescript/plugin.xml
+++ b/com.palantir.typescript/plugin.xml
@@ -328,23 +328,7 @@
              name="Include/exclude">
        </page>
    </extension>
-   <extension
-         point="org.eclipse.ui.propertyPages">
-      <page
-            class="com.palantir.typescript.ExclusionInclusionPatternsPage"
-            id="com.palantir.typescript.exclusionInclusionPatternsPage"
-            name="TypeScript">
-         <enabledWhen>
-            <adapt type="org.eclipse.core.resources.IResource" >
-                <test
-                    property="org.eclipse.core.resources.projectNature"
-                    value="com.palantir.typescript.typeScriptNature">
-                </test>
-            </adapt>
-         </enabledWhen>
-      </page>
-   </extension>
-
+   
    <extension
          point="org.eclipse.ui.propertyPages">
       <page
@@ -366,6 +350,20 @@
             </adapt>
          </enabledWhen>
       </page>
+      <page
+            class="com.palantir.typescript.ExclusionInclusionPatternsPage"
+            id="com.palantir.typescript.exclusionInclusionPatternsPage"
+            category="com.palantir.typescript.buildPathPropertyPage"
+            name="Include/exclude">
+         <enabledWhen>
+            <adapt type="org.eclipse.core.resources.IResource" >
+                <test
+                    property="org.eclipse.core.resources.projectNature"
+                    value="com.palantir.typescript.typeScriptNature">
+                </test>
+            </adapt>
+         </enabledWhen>
+      </page>   
    </extension>
 
 </plugin>
