--- a/com.palantir.typescript/src/com/palantir/typescript/resources.properties
+++ b/com.palantir.typescript/src/com/palantir/typescript/resources.properties
@@ -22,6 +22,8 @@ preferences.compiler.map.source.files = Generate corresponding .map files
 preferences.compiler.module.gen.target = Module code generation:
 preferences.compiler.no.lib = Do not include the default library (lib.d.ts) when compiling
 preferences.compiler.remove.comments = Do not emit comments to output
+preferences.compiler.clean.generated.files = Do not clean generated output on project clean (git friendly)
+preferences.compiler.mark.generated.files.as.derived = Mark generated output as derived
 
 preferences.compiler.ecmascript3 = 3
 preferences.compiler.ecmascript5 = 5
